fix(select): keep checkbox label from wrapping w/ description

--- a/src/patternfly/components/Select/select.scss
+++ b/src/patternfly/components/Select/select.scss
@@ -409,6 +409,10 @@
       --pf-c-select__menu-item--PaddingRight: 0;
     }
 
+    .pf-c-check__label {
+      white-space: nowrap;
+    }
+
     white-space: normal;
   }
 }
